--- a/diffusion_policy/config/train_diffusion_unet_real_image_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_real_image_workspace.yaml
@@ -5,27 +5,28 @@ defaults:
 name: train_diffusion_unet_image
 _target_: diffusion_policy.workspace.train_diffusion_unet_image_workspace.TrainDiffusionUnetImageWorkspace
 
-task_name: ${task.name}
-shape_meta: ${task.shape_meta}
-exp_name: "default"
+
+task_name: ${task.name}         # 从task中继承的任务名称
+shape_meta: ${task.shape_meta}  # 图像的形状元数据
+exp_name: "default"             # 实验的名称
 
 horizon: 16
 n_obs_steps: 2
-n_action_steps: 8
+n_action_steps: 8               # 行动步骤的数量
 n_latency_steps: 0
 dataset_obs_steps: ${n_obs_steps}
 past_action_visible: False
 keypoint_visible_rate: 1.0
 obs_as_global_cond: True
 
-policy:
+policy:       # 策略设置，包括噪声调度器、观察编码器等
   _target_: diffusion_policy.policy.diffusion_unet_image_policy.DiffusionUnetImagePolicy
 
   shape_meta: ${shape_meta}
   
   noise_scheduler:
     _target_: diffusers.schedulers.scheduling_ddim.DDIMScheduler
-    num_train_timesteps: 100
+    num_train_timesteps: 100        # umi = 50
     beta_start: 0.0001
     beta_end: 0.02
     # beta_schedule is important
@@ -53,7 +54,7 @@ policy:
   horizon: ${horizon}
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_obs_steps: ${n_obs_steps}
-  num_inference_steps: 100
+  num_inference_steps: 100      # umi =16
   obs_as_global_cond: ${obs_as_global_cond}
   # crop_shape: null
   diffusion_step_embed_dim: 128
@@ -75,14 +76,14 @@ ema:
 
 dataloader:
   batch_size: 128
-  num_workers: 16
+  num_workers: 40
   shuffle: True
   pin_memory: True
   persistent_workers: True
 
 val_dataloader:
   batch_size: 128
-  num_workers: 16
+  num_workers: 40
   shuffle: False
   pin_memory: True
   persistent_workers: True
@@ -102,7 +103,7 @@ training:
   # optimization
   lr_scheduler: cosine
   lr_warmup_steps: 500
-  num_epochs: 600
+  num_epochs: 600     # umi =120，它本人发文用的300，这里用的600
   gradient_accumulate_every: 1
   # EMA destroys performance when used with BatchNorm
   # replace BatchNorm with GroupNorm.
@@ -133,7 +134,7 @@ checkpoint:
   topk:
     monitor_key: train_loss
     mode: min
-    k: 5
+    k: 10
     format_str: 'epoch={epoch:04d}-train_loss={train_loss:.3f}.ckpt'
   save_last_ckpt: True
   save_last_snapshot: False
